--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,17 @@
       <artifactId>jaxb-runtime</artifactId>
       <version>3.0.2</version>
     </dependency>
+      <dependency>
+          <groupId>jakarta.persistence</groupId>
+          <artifactId>jakarta.persistence-api</artifactId>
+          <version>3.1.0</version>
+      </dependency>
+      <dependency>
+          <groupId>javax.persistence</groupId>
+          <artifactId>javax.persistence-api</artifactId>
+          <version>2.2</version>
+          <scope>provided</scope>
+      </dependency>
 <dependency>
       <groupId>org.junit.jupiter</groupId>
       <artifactId>junit-jupiter-api</artifactId>
